<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Units -->
    <PreferenceCategory android:title="@string/pref_category_units">

        <ListPreference
            android:key="pref_distance_unit"
            android:title="@string/pref_distance_unit_title"
            android:summary="%s"
            android:entries="@array/pref_distance_entries"
            android:entryValues="@array/pref_distance_values"
            android:defaultValue="km"
            app:useSimpleSummaryProvider="false" />

        <ListPreference
            android:key="pref_weight_unit"
            android:title="@string/pref_weight_unit_title"
            android:summary="%s"
            android:entries="@array/pref_weight_entries"
            android:entryValues="@array/pref_weight_values"
            android:defaultValue="kg"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <!-- Voice Feedback -->
    <PreferenceCategory android:title="@string/pref_category_voice">

        <SwitchPreferenceCompat
            android:key="pref_voice_enabled"
            android:title="@string/pref_voice_enabled_title"
            android:summary="@string/pref_voice_enabled_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="pref_voice_frequency"
            android:title="@string/pref_voice_frequency_title"
            android:summary="%s"
            android:entries="@array/pref_voice_freq_entries"
            android:entryValues="@array/pref_voice_freq_values"
            android:defaultValue="1"
            android:dependency="pref_voice_enabled"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <!-- Appearance -->
    <PreferenceCategory android:title="@string/pref_category_appearance">

        <ListPreference
            android:key="pref_theme"
            android:title="@string/pref_theme_title"
            android:summary="%s"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:defaultValue="system"
            app:useSimpleSummaryProvider="false" />

        <ListPreference
            android:key="pref_language"
            android:title="@string/pref_language_title"
            android:summary="%s"
            android:entries="@array/pref_language_entries"
            android:entryValues="@array/pref_language_values"
            android:defaultValue="en"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <!-- About -->
    <PreferenceCategory android:title="@string/pref_category_about">

        <Preference
            android:key="pref_version"
            android:title="@string/pref_version_title"
            android:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>
